--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,11 @@
           <version>1.9.13</version>
         </dependency>
         <!-- Jetty -->
-<!--         <dependency>
+        <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-webapp</artifactId>
             <version>7.6.0.v20120127</version>
-        </dependency> -->
+        </dependency>
 
         <dependency>
           <groupId>asm</groupId>
